--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -17,6 +17,7 @@
 	<classpathentry kind="lib" path="sedml_libs/jmathml-2.2.1.jar"/>
 	<classpathentry kind="lib" path="sedml_libs/xom-1.2.5.jar"/>
 	<classpathentry kind="lib" path="libs/jsbml-1.2-SNAPSHOT-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="libs/BFLog-1.3.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
