--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -20,7 +20,8 @@ bin.includes = META-INF/,\
                sedml_libs/xom-1.2.5.jar,\
                libs/batik-svg-dom.jar,\
                libs/batik-util-1.7.jar,\
-               js-src/
+               js-src/,\
+               libs/BFLog-1.3.3.jar
 source.. = src/,\
            resources/
            output.. = bin/
