--- a/de.uni-rostock.sbi.CombineArchive/.classpath
+++ b/de.uni-rostock.sbi.CombineArchive/.classpath
@@ -2,10 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="lib" path="libs/fskml-1.0.5.jar"/>
-	<classpathentry kind="lib" path="libs/pmfml-0.0.11.jar"/>
-	<classpathentry kind="lib" path="libs/bfr-swing-1.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="CombineArchive-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
