--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -1,7 +1,6 @@
 bin.includes = META-INF/,\
                plugin.xml,\
                .,\
-               libs/CombineArchive-1.1.jar,\
                libs/freemarker-2.3.23.jar,\
                icons/,\
                libs/bfr-swing-1.0-SNAPSHOT.jar,\
@@ -14,8 +13,7 @@ bin.includes = META-INF/,\
                sedml_libs/xom-1.2.5.jar,\
                libs/batik-svg-dom.jar,\
                libs/batik-util-1.7.jar,\
-               js-src/,\
-               libs/BFLog-1.3.3.jar
+               js-src/
 source.. = src/,\
            resources/
            output.. = bin/
