--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/batik-util-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/freemarker-2.3.23.jar"/>
 	<classpathentry kind="lib" path="libs/bfr-swing-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="libs/fskml-1.0.11.jar" sourcepath="libs/fskml-1.0.11-sources.jar"/>
 	<classpathentry kind="lib" path="sedml_libs/jaxen-1.1.6.jar"/>
 	<classpathentry kind="lib" path="sedml_libs/jdom-1.1.3.jar"/>
 	<classpathentry kind="lib" path="sedml_libs/jdom-contrib-1.1.3.jar"/>
@@ -16,5 +15,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="src" path="test"/>
+	<classpathentry exported="true" kind="lib" path="libs/fskml-1.0.12.jar" sourcepath="libs/fskml-1.0.12-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
