--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -14,6 +14,7 @@
 
 	<modules>
 		<module>de.bund.bfr.knime.fsklab.metadata.model.test</module>
+		<module>de.bund.bfr.knime.fsklab.nodes.deprecated.test</module>
 		<module>de.bund.bfr.knime.fsklab.nodes.test</module>
 	</modules>
 </project>
