--- a/bundles/de.bund.bfr.formats/.classpath
+++ b/bundles/de.bund.bfr.formats/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry exported="true" kind="lib" path="vinnie-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="BFLog-1.3.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="CombineArchive-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="jsbml-1.2-SNAPSHOT-with-dependencies.jar"/>
 	<classpathentry exported="true" kind="lib" path="pmfml-0.0.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
