--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,5 @@ deploy:
    skip_cleanup: true
    script: bash bintray_nightly.sh
    on:
+      branch: master
       condition: $TRAVIS_EVENT_TYPE = cron
