--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: java
-script: mvn clean verify -Pjacoco coveralls:report
+# Disable JaCoCo as Coveralls is failing
+script: mvn clean verify # -Pjacoco coveralls:report
 # Cache maven repository to speed up build
 cache:
    directories:
