--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache:
 before_install:
 - sudo apt-get update 
 - sudo apt-get install -y r-base
-- sudo apt-get install libcurl4-openssl-dev libxml2-dev openssl-dev
+- sudo apt-get install libcurl4-openssl-dev libxml2-dev libssl-dev
 - sudo R --vanilla -e 'install.packages(c("RServe", "miniCRAN"), repos="http://cran.us.r-project.org")'
 
 # If build succeeds upload test coverage report
