--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,14 @@ cache:
 
 # Before the build, install R with required packages
 before_install:
-- sudo apt-get update 
-- sudo apt-get install -y r-base
-- sudo apt-get install libcurl4-openssl-dev libxml2-dev libssl-dev
+# Install R 3.2 instead of R 3.0 from base Ubuntu
+- sudo sh -c 'echo "deb http://cran.rstudio.com/bin/linux/ubuntu trusty/" >> /etc/apt/sources.list'
+- gpg --keyserver keyserver.ubuntu.com --recv-key E084DAB9
+- gpg -a --export E084DAB9 | sudo apt-key add -
+- sudo apt-get update -qq
+- sudo apt-get install r-base -qq
+# Install packages
+- sudo apt-get install libcurl4-openssl-dev libxml2-dev libssl-dev -qq
 - sudo R --vanilla -e 'install.packages(c("RServe", "miniCRAN"), repos="http://cran.us.r-project.org")'
 
 # If build succeeds upload test coverage report
