--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
 - sudo apt-get install r-base -qq
 # Install packages
 - sudo apt-get install libcurl4-openssl-dev libxml2-dev libssl-dev -qq
-- sudo R --vanilla -e 'install.packages(c("RServe", "miniCRAN"), repos="http://cran.us.r-project.org")'
+- sudo R --vanilla -e 'install.packages(c("Rserve", "miniCRAN"), repos="http://cran.us.r-project.org")'
 
 # If build succeeds upload test coverage report
 after_success:
