--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -57,7 +57,8 @@
      </javascriptComponent>
      <!-- Javascript component for Fsk Editor JS node -->
      <javascriptComponent
-       setValidationError-method-name="displayErrors"
+       
+       validate-method-name="validate"
        getComponentValue-method-name="getComponentValue"
        implementationBundleID="de.bund.bfr.knime.fsklab.js.FSKEditorJS.bundle"
        init-method-name="init"
