--- a/de.bund.bfr.knime.testreport/pom.xml
+++ b/de.bund.bfr.knime.testreport/pom.xml
@@ -117,9 +117,17 @@
 			<version>1.0.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+		<!--
 		<dependency>
 			<groupId>de.bund.bfr.knime</groupId>
 			<artifactId>de.bund.bfr.knime.pmm.common.test</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		-->
+		<dependency>
+			<groupId>de.bund.bfr.knime</groupId>
+			<artifactId>de.bund.bfr.knime.tests</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
