--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,8 @@
 		<!-- Test plugins -->
 		<module>de.bund.bfr.knime.fsklab.metadata.model.test</module>
 		<module>de.bund.bfr.knime.fsklab.nodes.test</module>
-		<module>de.bund.bfr.knime.pmm.common.test</module>
+		<!-- <module>de.bund.bfr.knime.pmm.common.test</module> -->
+		<module>de.bund.bfr.knime.tests</module>
 		<module>de.bund.bfr.knime.pmm.nodes.test</module>
 
 		<!-- Test report -->
