--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,11 @@ after_success:
 
 # Deploy build
 deploy:
--  provider: script
-   skip_cleanup: true # to upload artifacts created during the build
-   script: bash bintray.sh
-   on: test
+- provider: script
+  skip_cleanup: true # to upload artifacts created during the build
+  script: bash bintray.sh
+  on: test
+- provider: script
+  skip_cleanup: true # to upload artifacts created during the build
+  script: bash bintray.sh
+  on: test_release
