--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,7 @@ before_deploy:
 - wget -q http://download.knime.org/analytics-platform/linux/knime_3.6.2.linux.gtk.x86_64.tar.gz
 - tar -xzf knime_3.6.2.linux.gtk.x86_64.tar.gz
 - rm knime_3.6.2.linux.gtk.x86_64.tar.gz
-#- knime_3.6.2/knime -application org.eclipse.equinox.p2.director -repository https://update.knime.org/analytics-platform/3.6,https://dl.bintray.com/silebat/fsklab_icpmf -installIU de.bund.bfr.knime.fsklab.feature.feature.group
-# Produce an error by skipping a needed update site. The script and the should fail.
+- knime_3.6.2/knime -application org.eclipse.equinox.p2.director -repository https://update.knime.org/analytics-platform/3.6,https://dl.bintray.com/silebat/fsklab_icpmf -installIU de.bund.bfr.knime.fsklab.feature.feature.group
 - knime_3.6.2/knime -application org.eclipse.equinox.p2.director -repository https://update.knime.org/analytics-platform/3.6 -installIU de.bund.bfr.knime.fsklab.feature.feature.group
 - rm -Rf knime_3.6.2
 
