--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_deploy:
 - wget -q http://download.knime.org/analytics-platform/linux/knime_3.6.2.linux.gtk.x86_64.tar.gz
 - tar -xzf knime_3.6.2.linux.gtk.x86_64.tar.gz
 - rm knime_3.6.2.linux.gtk.x86_64.tar.gz
-- FSK_REPO="$TRAVIS_BUILD_DIR/releng/de.bund.bfr.knime.update/target/repository"
+- FSK_REPO="file://$TRAVIS_BUILD_DIR/releng/de.bund.bfr.knime.update/target/repository"
 - knime_3.6.2/knime -application org.eclipse.equinox.p2.director -repository https://update.knime.org/analytics-platform/3.6,$FSK_REPO -installIU de.bund.bfr.knime.fsklab.feature.feature.group
 - rm -Rf knime_3.6.2
 
