--- a/.travis.yml
+++ b/.travis.yml
@@ -27,17 +27,22 @@ after_success:
 
 # Integration test. Try to install build on KNIME.
 before_deploy:
-- wget -q http://download.knime.org/analytics-platform/linux/knime_3.6.2.linux.gtk.x86_64.tar.gz
-- tar -xzf knime_3.6.2.linux.gtk.x86_64.tar.gz
-- rm knime_3.6.2.linux.gtk.x86_64.tar.gz
+- wget -q http://download.knime.org/analytics-platform/linux/knime_3.7.1.linux.gtk.x86_64.tar.gz
+- tar -xzf knime_3.7.1.linux.gtk.x86_64.tar.gz
+- rm knime_3.7.1.linux.gtk.x86_64.tar.gz
 - FSK_REPO="file://$TRAVIS_BUILD_DIR/releng/de.bund.bfr.knime.update/target/repository"
-- knime_3.6.2/knime -application org.eclipse.equinox.p2.director -repository https://update.knime.org/analytics-platform/3.6,$FSK_REPO -installIU de.bund.bfr.knime.fsklab.feature.feature.group
-- rm -Rf knime_3.6.2
+- knime_3.7.1/knime -application org.eclipse.equinox.p2.director -repository https://update.knime.org/analytics-platform/3.7,$FSK_REPO -installIU de.bund.bfr.knime.fsklab.feature.feature.group
+- rm -Rf knime_3.7.1
 
 # Deploy build
 deploy:
 - provider: script
   skip_cleanup: true # to upload artifacts created during the build
   script: bash bintray.sh
+  on: test
+deploy:
+- provider: script
+  skip_cleanup: true # to upload artifacts created during the build
+  script: echo "TEST OK!"
   on: test
 
