--- a/.travis.yml
+++ b/.travis.yml
@@ -44,5 +44,5 @@ deploy:
 - provider: script
   skip_cleanup: true # to upload artifacts created during the build
   script: echo "TEST OK!"
-  on: test
+  on: test_release
 
